Source/WebCore/rendering/RenderImage.cpp
@@ -842,6 +842,12 @@ void RenderImage::layoutShadowContent(const LayoutSize& oldSize)
     clearChildNeedsLayout();
 }
 
+bool RenderImage::canMapWidthHeightToAspectRatio() const
+{
+    // The aspectRatioOfImgFromWidthAndHeight only applies to <img>.
+    return is<HTMLImageElement>(element()) && !isShowingAltText();
+}
+
 void RenderImage::computeIntrinsicRatioInformation(FloatSize& intrinsicSize, double& intrinsicRatio) const
 {
     RenderReplaced::computeIntrinsicRatioInformation(intrinsicSize, intrinsicRatio);
@@ -858,6 +864,10 @@ void RenderImage::computeIntrinsicRatioInformation(FloatSize& intrinsicSize, dou
 
     // Don't compute an intrinsic ratio to preserve historical WebKit behavior if we're painting alt text and/or a broken image.
     if (shouldDisplayBrokenImageIcon()) {
+        if (!style().hasAspectRatio()) {
+            intrinsicRatio = intrinsicAspectRatioFromWidthHeight().valueOr(1);
+            return;
+        }
         intrinsicRatio = 1;
         return;
     }
