Source/WebCore/rendering/RenderImage.h
@@ -103,6 +103,8 @@ protected:
         imageChanged(imageResource().imagePtr());
     }
 
+    bool canMapWidthHeightToAspectRatio() const override;
+
 private:
     const char* renderName() const override { return "RenderImage"; }
 
