Source/WebCore/rendering/RenderReplaced.cpp
@@ -474,6 +474,23 @@ RoundedRect RenderReplaced::roundedContentBoxRect() const
         borderLeft() + paddingLeft(), borderRight() + paddingRight());
 }
 
+Optional<double> RenderReplaced::intrinsicAspectRatioFromWidthHeight() const
+{
+    if (!settings().aspectRatioOfImgFromWidthAndHeightEnabled())
+        return Optional<double>();
+
+    if (!canMapWidthHeightToAspectRatio())
+        return Optional<double>();
+
+    ASSERT(element());
+    double attributeWidth = parseValidHTMLFloatingPointNumber(element()->getAttribute(HTMLNames::widthAttr)).valueOr(0);
+    double attributeHeight = parseValidHTMLFloatingPointNumber(element()->getAttribute(HTMLNames::heightAttr)).valueOr(0);
+    if (attributeWidth > 0 && attributeHeight > 0)
+        return attributeWidth / attributeHeight;
+
+    return Optional<double>();
+}
+
 void RenderReplaced::computeIntrinsicRatioInformation(FloatSize& intrinsicSize, double& intrinsicRatio) const
 {
     // If there's an embeddedContentBox() of a remote, referenced document available, this code-path should never be used.
@@ -490,22 +507,7 @@ void RenderReplaced::computeIntrinsicRatioInformation(FloatSize& intrinsicSize, 
         return;
 
     if (intrinsicSize.isEmpty()) {
-        if (!settings().aspectRatioOfImgFromWidthAndHeightEnabled())
-            return;
-
-        auto* node = element();
-        // The aspectRatioOfImgFromWidthAndHeight only applies to <img>.
-        if (!node || !is<HTMLImageElement>(*node) || !node->hasAttribute(HTMLNames::widthAttr) || !node->hasAttribute(HTMLNames::heightAttr))
-            return;
-
-        // We shouldn't override the aspect-ratio when the <img> element has an empty src attribute.
-        if (!is<RenderImage>(*this) || !downcast<RenderImage>(*this).cachedImage())
-            return;
-
-        double attributeWidth = parseValidHTMLFloatingPointNumber(node->getAttribute(HTMLNames::widthAttr)).valueOr(0);
-        double attributeHeight = parseValidHTMLFloatingPointNumber(node->getAttribute(HTMLNames::heightAttr)).valueOr(0);
-        if (attributeWidth > 0 && attributeHeight > 0)
-            intrinsicRatio = attributeWidth / attributeHeight;
+        intrinsicRatio = intrinsicAspectRatioFromWidthHeight().valueOr(0);
         return;
     }
 
